<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main5Activity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/replaceView"
        android:layout_below="@+id/updatetitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_pass"
        android:id="@+id/oldView"
        android:layout_below="@+id/replaceEdit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pass"
        android:id="@+id/newView"
        android:layout_below="@+id/oldEdit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pass_con"
        android:id="@+id/newConfView"
        android:layout_below="@+id/newEdit"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/deleteButton"
        android:layout_marginTop="15dp"
        android:background="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/replaceEdit"
        android:layout_below="@+id/replaceView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/oldEdit"
        android:layout_below="@+id/oldView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/newEdit"
        android:layout_below="@+id/newView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/newConfEdit"
        android:layout_below="@+id/newConfView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickReplacePass"
        android:text="@string/update_button"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/newConfView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/updatetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="UPDATE"
        android:textSize="35dp" />

</RelativeLayout>