<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main2Activity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="ADDITION"
        android:textSize="35dp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="15dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickAddName"
        android:text="@string/btn_add"
        android:layout_below="@+id/txtNote"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtName"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/txtName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/note"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtNote"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

</RelativeLayout>